fix images in dark mode & add my CV URL

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,7 +248,7 @@ a {
 }
 
 .head__right__button {
-    padding: .625rem 0;
+    padding: 1.875rem 0;
 }
 
 
